-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.10.1
-
None
-
-
cc1399a4b672aa4b9679b1febff3c8c762842612 (qt-creator/qt-creator/4.10)
When i debug some of my code, i ve been playing with editror. and find out that, you could put more than one breakpoints on the same line, May be this also not good behaviour, but, it logical, and not fatal. Worst thing happend, when i been trying to remove those breakpoints, and the whole thing cushed.
So, clear steps for reproduce:
- Put some breakpoints on different lines
- Drag and drop one ore more breakpoints on the same line
- Try to remove that stacked breakpoint
- ....
- QtCreator crashes...
Also you could watch a little video with this behaviour.
For Gerrit Dashboard: QTCREATORBUG-23107 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
278044,3 | Debugger: Fix crash after breakpoint marker drag&drop | 4.10 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |